# Aurora-Emulator

./: .gitignore  README.md  settings.gradle.kts
.androidide/editor/: openedFiles.json
app/: build.gradle.kts  my-release-key.keystore
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/project_aurora/emu/: ICmdEntryInterface.aidl
app/src/main/cpp/: .gitignore  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/compositor/vulkan/: co_device.cpp  co_device.h  co_hardware_buffers.cpp  co_hardware_buffers.h  vulkan.cpp  vulkan.h
app/src/main/java/com/project_aurora/emu/: AuroraApplication.kt  CmdEntryPoint.java  LoriePreferences.java  LorieView.java  NativeCode.kt  XserverActivity.java
app/src/main/java/com/project_aurora/emu/compositor/: VulkanSurfaceView.kt  VulkanWrapperActivity.kt
app/src/main/java/com/project_aurora/emu/core/: Init.kt  WineContext.kt  XServerContext.kt
app/src/main/java/com/project_aurora/emu/coreutils/: AsyncTask.kt  EnvVars.kt  RunServiceClass.kt  ShellLoader.kt  ZipFileExtractor.kt
app/src/main/java/com/project_aurora/emu/input/: InputEventSender.java  InputStrategyInterface.java  InputStub.java  RenderData.java  SwipeDetector.java  TapGestureDetector.java  TouchInputHandler.java
app/src/main/res/drawable/: ic_background_system_shell.xml
app/src/main/res/layout/: activity_log.xml  activity_main.xml  activity_system_shell.xml  activity_vulkan_wrapper.xml  fragment_home.xml  fragment_settings.xml  preferences_header.xml  preferences_item.xml  preferences_switch.xml  settings_item.xml  xserver_activity.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: preferences.xml  shortcuts.xml
loader/: build.gradle
loader/src/main/java/com/termux/x11/: Loader.java
(+29 files in other folders)
